@@ -17,7 +17,9 @@
 
 	<body>
 		<h1 class="underlined special">
-			&#8592; <a href="../moderation/">{hashover:title}</a>
+			<a class="plain-button left" href="../moderation/">
+				&#8592; {hashover:back}
+			</a>
 
 			{hashover:logout}
 		</h1>
